# farm-hub-api

./: .dockerignore  .env  .gitignore  Docker-compose.yml  Dockerfile  main.py  pyproject.toml
app/: config.py  database.py
app/controllers/: analyze_controller.py  project_controller.py  project_controller_stream.py  supplier_controller.py  user_controller.py
app/data/: penadah.json
app/middleware/: auth_middleware.py
app/models/: __init__.py  analisis_financial.py  informasi_teknis.py  produk.py  project.py  ringkasan_awal.py  roadmap.py  suplier.py  user.py
app/routes/: __init__.py  project_routes.py  supplier_routes.py  user_routes.py
app/schemas/: auth.py  project.py
app/service/gemini/: gemini_client.py
app/service/generative/: __init__.py  gemini_client.py  project_analyzer.py  project_calculator.py  prompt_builder.py  response_parser.py
app/service/generative/prompt_analisis_financial/: __init__.py  analyzer.py  prompt_builder.py  response_parser.py
app/service/generative/prompt_informasi_teknis/: __init__.py  analyzer.py  gemini_client.py  prompt_builder.py  response_parser.py
app/service/generative/prompt_ringkasan_awal/: __init__.py  context_helper.py  gemini_client.py  project_analyzer.py  project_analyzer_stream.py  project_calculator.py  prompt_builder.py  response_parser.py
app/service/generative/prompt_roadmap/: __init__.py  analyzer.py  prompt_builder.py  response_parser.py  substep_generator.py
app/utils/: gemini_service.py  security.py
farmhub_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
