[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farmhub-api"
version = "1.0.0"
description = "Farm hub"
requires-python = ">=3.9"

dependencies = [
    "fastapi[standard]==0.113.0",
    "uvicorn[standard]==0.29.0",
    "sqlmodel>=0.0.14",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]


[project.scripts]
dev-server = "main:main"


[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]