[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farmhub-api"
version = "1.0.0"
description = "Farm hub"
requires-python = ">=3.9"

dependencies = [
    "fastapi[standard]==0.113.0",
    "uvicorn[standard]==0.29.0",
    "sqlmodel>=0.0.14",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.2.0",  
    "python-multipart>=0.0.6",
]


[project.scripts]
dev-server = "main:main"


[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
